[package]
name = "rustygate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
futures = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
leaky-bucket = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
